<?xml version="1.0" encoding="utf-8"?>
<!--
    Navigation Drawer Menu
    Deskripsi: Struktur menu navigasi utama aplikasi
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ================= MAIN MENU GROUP ================= -->
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single"
        tools:ignore="ExtraText">

        <!-- Navigation: Home -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_title_home"
            app:iconPadding="8dp"
            app:iconTint="@color/nav_item_color" />

        <!-- Navigation: Profile -->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_title_profile"
            app:iconPadding="8dp"
            app:iconTint="@color/nav_item_color" />

    </group>

    <!-- ================= PREFERENCES SECTION ================= -->
    <item android:title="@string/menu_section_preferences">
        <menu>
            <group android:checkableBehavior="single">

                <!-- Navigation: Notifications -->
                <item
                    android:id="@+id/nav_notifications"
                    android:icon="@drawable/ic_notifications"
                    android:title="@string/menu_title_notifications"
                    app:iconPadding="8dp"
                    app:iconTint="@color/nav_item_color" />

                <!-- Navigation: Settings -->
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_title_settings"
                    app:iconPadding="8dp"
                    app:iconTint="@color/nav_item_color" />

            </group>
        </menu>
    </item>

    <!-- ================= ACCOUNT SECTION ================= -->
    <item android:title="@string/menu_section_account">
        <menu>
            <group android:checkableBehavior="single">

                <!-- Navigation: Logout -->
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_title_logout"
                    app:iconPadding="8dp" />

            </group>
        </menu>
    </item>

</menu>